clusters/home/apps/vscode/vscode/configs/vscode-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vscode-ingressroute
  namespace: vscode
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://vscode.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: VSCode
    gethomepage.dev/group: Programming
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: vscode # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: VSCode
    #gethomepage.dev/widget.type: "vscode"
    #gethomepage.dev/widget.url: "https://vscode.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`vscode.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: vscode-docker-vscode-customized
      port: 8443
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: vscode-certificate-secret
